--- a/vscode/petrichorianhopscript/client/player.html
+++ b/vscode/petrichorianhopscript/client/player.html
@@ -4588,6 +4588,13 @@
 								}()
 							}
 						})
+						if (blockType == HSBlockType.Game) {
+							for (let type = HSBlockType.StageTraitWidth; type < HSBlockType.HS_END_OF_STAGE_TRAITS; type++) {
+								const parameterBlock = new HSParameterBlock(main.context)
+								parameterBlock.type = type
+								result.push({name: `HSBlockType.${HSBlockType[type]}`, value:parameterBlock.stageParameterBlock().computedValue()})
+							}
+						}
 						console.log(result)
 						ws.send(JSON.stringify({type:"response", id:data.responseId, value:result}))
 						break
