--- a/vscode/petrichorianhopscript/client/player.html
+++ b/vscode/petrichorianhopscript/client/player.html
@@ -4502,6 +4502,10 @@
 			<hopscotch-player data-project-json='' stage-size='container' style='display: block; position: fixed; top: 0px; left: 0px; width: 100%; height: 100%;'></hopscotch-player>
 			<script>
 				/*
+				* Where to get custom images from?
+				*/
+				window.BASE_IMAGE_URL = window.location.protocol + "//" + window.location.host + '/images/'
+				/*
 				* Load json
 				*/ 
 				fetch("/project").then(e=>e.text().then(text=>{
