Make User.username = "Debugger" in debugger

--- a/vscode/petrichorianhopscript/client/player.html
+++ b/vscode/petrichorianhopscript/client/player.html
@@ -4505,6 +4505,11 @@
 				* Where to get custom images from?
 				*/
 				window.BASE_IMAGE_URL = window.location.protocol + "//" + window.location.host + '/images/'
+				window.ACCOUNT = {
+					user: {
+						nickname: "Debugger"
+					}
+				}
 				/*
 				* Load json
 				*/ 
